--- a/resources/sass/partials/_main.scss
+++ b/resources/sass/partials/_main.scss
@@ -83,9 +83,9 @@ main{
   }
 // nella sezionescelta ristorante si puo' mettere lo slider
   & .choose-restaurant{
-    // display:flex;
-    // flex-wrap:nowrap;
-    // justify-content: center;
+    //  display:flex;
+    //  flex-wrap:nowrap;
+    //  justify-content: center;
 
     & h2 {
       margin-bottom: 30px;
@@ -197,11 +197,16 @@ main{
   }   // fine sezione ristoranti guest
 
   .card-restaurant{
-    border-bottom: 1px solid black;
-    border-top: 1px solid black;
-    dispaly:flex;
+    width:200px;
+    border:1px solid #FFBF00;
+    border-radius: 5px;
+    padding:20px;
+    display:flex;
     flex-direction: column;
     align-items: center;
+    img{
+      width:100%;
+    }
     p{
       text-align:center;
       font-size: 25px;
@@ -210,7 +215,10 @@ main{
       text-transform: capitalize;
     }
     .btn-menu{
-      background-color:red;
+      border-radius:10px;
+      background-color:rgb(255, 191, 0, 0.2);
+      padding:5px;
+
     }
   }
 
