--- a/resources/sass/partials/_carrello.scss
+++ b/resources/sass/partials/_carrello.scss
@@ -25,12 +25,6 @@
     // top: 35%;
     // z-index: 1000;
     // border-radius: 10%;
-    carr-header{
-        position:absolute;
-        top:10px;
-    
-      
-    }
     h5{
         color:black;
         text-align:center;
@@ -57,3 +51,8 @@
     display: none;
 }
 
+    .carr-header{
+       position: absolute;
+        top: 5px;
+        right: 25px;  
+    }
