--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -15,6 +15,7 @@
 @import "partials/show";
 @import "partials/registrazione";
 @import "partials/carrello";
+@import "partials/restaurantMain";
 
 
 
