--- a/resources/sass/partials/_carrello.scss
+++ b/resources/sass/partials/_carrello.scss
@@ -1,58 +1,106 @@
-// .carrello {
-//     //position: fixed;
-//     // right: 5%;
-//     // top: 25%;
-//     // z-index: 1000;
-//     & i{
-//         padding: 20px;
-//         border-radius: 50%;
-//         background-color: orange;
-//         color: white;
-//         font-size: 20px;
-//     }
-// }
 
-.oggetti_carrello{
-    background:blue;
+.carousel-caption{
+position: absolute;
+right: 15%;
+bottom: 20px;
+padding-top: 20px;
+padding-bottom: 20px;
+color: #fff;
+}
+
+#carr{
+    background-color: white;
+    display:flex;
+    flex-direction:column;
+    align-items:center; 
+    box-shadow: 2px 2px 2px 2px lightgrey;
     margin-top: 50px;
-    width: 300px;
-    border:3px solid orange;
+    width: 500px;
+    height: 400px;
     border-radius:10px;
     padding:10px;
- 
-    // position: fixed;
-    // right: 5%;
-    // top: 35%;
-    // z-index: 1000;
-    // border-radius: 10%;
+    margin-right:50px;
+    margin-left:50px;
     h5{
-        color:black;
-        text-align:center;
-        font-size:25px;
-        padding-top:15px;
+        font-size: 35px;
+        font-weight:bold;
     }
-    hr{
+    .img-carr{
+        width:100%;
+       
         
-        border:2px solid orange;
-        color:white;
-    }
-    & p{
-        margin:10px auto;
-        color:black;
+
+        .moto {
+            width:10%;
+            margin:0 auto;
+        }
+        .pollice{
+            width:10%;
+            margin:0 auto;
+            
+        }
+        .tempo{
+            width:10%; 
+            margin:0 auto;
+        }
         
     }
-}
+     
+    
+    .contenitore-carrello{
+        width:100%;
+       // background: yellow;
+        display:flex;
+        flex-direction:row;
+        flex-wrap:nowrap;
+        padding:10px;
+        overflow-y:scroll;
+        
+        .quantita{
+            background: brown;
+            width:30px;
+        }
+        .nome_piatto input{
+            background: coral;
+            width:150px;
+        }
+        .prezzo_p input{
+            background: cornflowerblue;
+            width:50px;
+        }
 
-.show {
-    display: block;
-}
-
-.hide {
-    display: none;
-}
-
-    .carr-header{
-       position: absolute;
-        top: 5px;
-        right: 25px;  
     }
+
+    .container-btn-pag{
+      margin-top:20px;
+      margin-bottom:15px;
+
+        .btn-pagamento{
+            width:200px;
+            padding:10px;
+            border-radius:15px;
+        }
+    }
+    
+
+}
+
+.carr-header{
+   
+    font-size: 20px;
+     position: absolute;
+     z-index:20000;
+     top: 15px;
+     right: 30px; 
+     padding-left:50px;
+     
+
+    .show {
+        display: block;
+    }
+
+    .hide {
+        display: none;
+    }
+
+}
