--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -16,6 +16,8 @@
 @import "partials/registrazione";
 @import "partials/carrello";
 @import "partials/restaurantMain";
+@import "partials/statistics";
+@import "partials/buttons";
 
 
 
