aggiustamento pagina show

--- a/resources/sass/partials/_commons.scss
+++ b/resources/sass/partials/_commons.scss
@@ -5,8 +5,8 @@
 }
 
 body{
-  width: 100%;
-  background-color: rgb(247, 247, 247);
+ 
+ // background-color: rgb(247, 247, 247);
 
   & #app{
     width: 100%;
