--- a/resources/sass/partials/_carrello.scss
+++ b/resources/sass/partials/_carrello.scss
@@ -15,8 +15,8 @@ color: #fff;
     align-items:center; 
     box-shadow: 2px 2px 2px 2px lightgrey;
     margin-top: 50px;
-    width: 500px;
-    height: 400px;
+    width: 600px;
+    height: 500px;
     border-radius:10px;
     padding:10px;
     margin-right:50px;
@@ -28,34 +28,54 @@ color: #fff;
     .img-carr{
         width:100%;
        
-        
-
+        display:flex;
+        justify-content:center;
+        //background-color: blueviolet;
+       
         .moto {
-            width:10%;
-            margin:0 auto;
+            width:15%;
+            padding:10px;
+            
         }
         .pollice{
-            width:10%;
-            margin:0 auto;
+            width:15%;
+            padding:10px;
             
         }
         .tempo{
-            width:10%; 
-            margin:0 auto;
+            width:15%; 
+            padding:10px;
+            
         }
         
-    }
+      }
+      .text-img-carr{
+        width:100%;      
+        display:flex;
+        justify-content:center;
+        //background-color:chartreuse;
+        small{
+            padding:0 5px 0 10px;
+            font-size:15px;
+            font-weight: bold;
+        }
+
+      }
      
     
     .contenitore-carrello{
         width:100%;
         background: yellow;
+        margin-top:10px;
         display:flex;
         flex-direction:row;
-        flex-wrap:nowrap;
-        justify-content:space-between;
+        //flex-wrap:nowrap;
+        justify-content:center;
         padding:10px;
         overflow-y:scroll;
+        scrollbar-width: none;
+        
+        
         
         // .quantita{
         //     display:flex;
@@ -83,21 +103,17 @@ color: #fff;
         .btn-pagamento{
             width:200px;
             padding:10px;
-            border-radius:15px;
+            border-radius:20px;
+            background-color: rgb(0, 199, 156);
+            font-size: 20px;
         }
     }
     
 
 }
 
-.carr-header{
+
    
-    font-size: 20px;
-     position: absolute;
-     z-index:20000;
-     top: 15px;
-     right: 30px; 
-     padding-left:50px;
      
 
     .show {
@@ -108,4 +124,3 @@ color: #fff;
         display: none;
     }
 
-}
