--- a/resources/sass/partials/_main.scss
+++ b/resources/sass/partials/_main.scss
@@ -2,6 +2,7 @@
 main{
   width: 100%;
   background-color:#fffffe;
+  margin-top:150px;
 
   // tipologie
   h1{
@@ -72,7 +73,6 @@ main{
       }
     }
       
-
    }
  }
   // sezione della parte ristoranti guest
@@ -94,7 +94,7 @@ main{
 
 
     & .guest-restaurants{
-     // background: linear-gradient(to right, #ffffff, hsla(184, 76%, 81%, 0.788));
+      //background: linear-gradient(to right, #ffffff, hsla(184, 76%, 81%, 0.788));
       width: 100%;
       margin: auto;
       display: flex;
@@ -121,7 +121,7 @@ main{
     }
 
       & .card{
-        
+       // background-color: red;
         width:calc(100% / 6);
         display: flex;       
         margin-top: 30px;
@@ -146,35 +146,45 @@ main{
 
         }
 
+        &:hover {
+          background-color:grey;         
+          opacity:0.5;
+        }
+
      
         .card-img-top {   
           display:flex;
           justify-content:center;
           width:100%; 
           height:70%;     
-          position:relative;
+          position:relative;          
 
-            &:hover {
-              background-color: black;         
-             opacity:0.6;
-         }
-         & img{
-          width:100%;
-          padding:10px;
-        }
-        }
+            & img{
+              width:100%;
+              padding:10px;
+            }
+          }
         .cover-layover{ 
+          display: flex;
+          flex-direction:column;
           display:none;
           position: absolute;
           top: 50%;
           left: 50%;
-          transform: translate(-50%, -50%);
-          
+          transform: translate(-50%, -50%);          
           color:#FFBF00;
           font-size: 60px;
+            .font-cover{                          
+                display: flex;
+                justify-content:center;
+            }
+            .text-cover{
+                
+                
+            }
         }
-        .card-img-top:hover .cover-layover{
-          
+
+        .card-img-top:hover .cover-layover{         
           display:block;
         }
       
@@ -182,46 +192,21 @@ main{
           text-decoration: none;
         }
 
+       
+
         & p{
           color:#272343;
           font-weight: bold;
-          font-size: 25px;
+          font-size: 35px;
           margin-bottom: 20px;
-          text-align: center;
-          
+          text-align: center;          
           margin:0px auto 10px auto; 
-          
-        }
+          text-transform: capitalize;                  
+       }
       }
     }
-  }   // fine sezione ristoranti guest
-
-  .card-restaurant{
-    width:200px;
-    border:1px solid #FFBF00;
-    border-radius: 5px;
-    padding:20px;
-    display:flex;
-    flex-direction: column;
-    align-items: center;
-    img{
-      width:100%;
-    }
-    p{
-      text-align:center;
-      font-size: 25px;
-      color:#272343;
-      font-weight:bold;
-      text-transform: capitalize;
-    }
-    .btn-menu{
-      border-radius:10px;
-      background-color:rgb(255, 191, 0, 0.2);
-      padding:5px;
-
-    }
-  }
-
+     // fine sezione guest-ristoranti   
+  } //fine choose-restaurant
 }//fine main
 
 
@@ -230,6 +215,7 @@ main{
     width: 100%;
     padding: 50px 0;
     background-color: #fff;
+
     & .container {
       display: flex;
       justify-content: space-between;
@@ -257,6 +243,7 @@ main{
 
     & .container-img-app{
       justify-content: center;
+
       @media screen and (max-width: 768px) {
         flex-direction: column;
       }
@@ -281,6 +268,7 @@ main{
     display: flex;
     flex-direction: column;
     justify-content: center;
+    
     img{
       margin:0 auto;
       width:50%;
@@ -300,7 +288,6 @@ main{
   }
 
 }
-
 
 
 
