--- a/resources/sass/partials/_show.scss
+++ b/resources/sass/partials/_show.scss
@@ -2,10 +2,8 @@ body{
   font-family: Gotham,Arial,Helvetica Neue,Helvetica,sans-serif;
 }
 .navbar-show{
- // background:darkgray;
- // width:500px;
-  //height:200px;
-  
+
+ 
   .collapse-show{
      width:100%;
      background-color: rgba(255, 191, 0, 0.9);
@@ -19,18 +17,12 @@ body{
 
      .navbar-nav-show-left{
        width:400px;
-        background:violet;
+        background:violet; 
+
+        // .list-unstyled{
 
          
-
-          a{
-            color:black;
-            font-size: 25px;
-            .fas{
-              color:black;
-            }
-          }
-         
+        // }
     }
     .navbar-nav-show-right{
       background:yellow;
@@ -153,10 +145,11 @@ margin-top:80px;
 // sezione piatti e tipologie
 
 .text-ordina{
-  padding: 24px 0 12px;
- text-align:center;
+  padding: 30px 0 15px;
+  text-align:justify;
+  margin-left:15px;
   font-weight: 600;
-  font-size: 48px;
+  font-size: 45px;
   color: #000;
 }
 #products{
@@ -165,57 +158,48 @@ margin-top:80px;
   margin:0 auto;
   display:flex;
   flex-direction: row;
-  flex-wrap:nowrap;
+ // flex-wrap:nowrap;
 
     .container2{
-     background-color:orange;
-        width:100%;
-         display:flex;
-         flex-direction:row;
+    // background-color:orange;
+    width:100%;
+    display:flex;
+    flex-direction:column;
 
     #product-items{
-      background: black;
-      width:80%;
+      //background: black;
+      width:100%;
       padding:20px;
       margin-left:30px;
       height:500px;
-      margin:auto;  
-    //   ::-webkit-scrollbar {
-    //     width: 0px;
-    //     background: transparent; /* make scrollbar transparent */
-    // }
+      margin:0 auto;  
       overflow-y:scroll;
-
+      scrollbar-width: none; //firefox
+      ::-webkit-scrollbar { 
+        display: none;  // Safari and Chrome
     }
 
-   .product-title{
-      width:1200px;
-     background:black;
-      padding-right:30px;
-      
     }
-
     .contenitore-piatti-img{
-      width:400px;
+      width:100%;
       background:white;
       display:flex;      
       justify-content:center; 
       flex-direction:column;
       padding:5px;
+      margin-left:5px;
       border-radius:10px;
-      border:2px solid lightgrey;
-      box-shadow: 3px 3px 3px ligthgrey;
+      border:3px solid lightgrey;
+      box-shadow: 3px 3px 3px grey;
 
 
       .img-container{
-       // background-color:red;
-        width:250px;
+        //background-color:red;
+        width:100%;
         height:200px;
         display:flex;
         flex-direction: row;
-        justify-content:center; 
-        margin-top:10px;
-        margin-left:40px;
+        margin:0 auto;         
         padding:3px;
         // position: relative;
         // overflow: hidden;
@@ -236,8 +220,7 @@ margin-top:80px;
         // }
         img{
           width:100%;
-          background:yellow;
-          
+          margin:0 auto;     
         }
 
         // .product-img{
@@ -252,12 +235,13 @@ margin-top:80px;
       }
     }
       .card-piatti{
-        width:300px;
-       // background:pink;
+        width:100%;
+        //background:pink;
         display:flex;
         flex-direction:column;
         height: 200px;
         margin-top:20px;
+        padding-bottom:10px;
         h5{
           font-size:30px;
           text-align:center;
@@ -278,12 +262,27 @@ margin-top:80px;
         }
         .prezzo-card{
           font-size:20px;
-         // background: red;        
+         text-align:center;        
           margin-top:30px;
           padding-left:5px;
-         
-  
+           
         }
+        .contenitore-btn-aggiungi{
+            display:flex;
+            justify-content:center;
+            padding:10px;
+
+          .btn-aggiungi{
+            width:100px;
+            padding:5px;
+            border-radius:15px;
+            background-color: rgb(0, 199, 156);
+            font-size: 15px;
+            
+          }
+
+        }
+        
 
       }
       
