--- a/resources/sass/partials/_main.scss
+++ b/resources/sass/partials/_main.scss
@@ -274,7 +274,7 @@ main{
   display:flex;
   flex-direction: row;
   justify-content: center;
-  fex-wrap:wrap;
+  flex-wrap:wrap;
   padding:20px;
 
   .section{
