--- a/resources/sass/partials/_header.scss
+++ b/resources/sass/partials/_header.scss
@@ -12,12 +12,12 @@ header {
 
   & .layover{
     margin:70px auto 10px auto;
-    width: 80%;
+    width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.3);
+    background-color: rgba(0, 0, 0, 0.7);
   }
   & nav {
-    background-color:rgb(255, 191, 0, 0.7) ;
+    background-color:rgb(255, 191, 0) ;
    // background: linear-gradient(to center, #e2eeee, #FFBF00);
     position: fixed;
     z-index:80;
@@ -115,34 +115,25 @@ header {
 
      }
      
-     & div.hcg-right{
-       width: 60%;
-       height: 300px;
-       display: flex;
-       justify-content: center;
-       align-items: center;
-       @media screen and(max-width: 992px){
-        height: 200px;
-       }
+    .hcg-right{
+      width: 100%;
+      height: 300px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      img{
+        width: 50%;
+        height: 300px;
+      }
 
-      //  & img {
-      //    height: 250px;
-      //    margin-right: 10px;
+      @media screen and(max-width: 992px){
+      height: 200px;
+      }
 
-      //  }
-
-       & i {
-         font-size: 200px;
-        color:rgb(255, 191, 0);
-        margin-right: 30px;
-        margin-top:50px;
+    }
 
 
-       }
-     }
-
-
-   }
+  }
 
    // header-content-guest @extend ;
 
