--- a/resources/sass/partials/_main.scss
+++ b/resources/sass/partials/_main.scss
@@ -1,8 +1,5 @@
 
-main{
-  width: 100%;
-  background-color:#fffffe;
-  margin-top:150px;
+
 
   // tipologie
   h1{
@@ -67,230 +64,221 @@ main{
       font-weight: bold;
 
       @media screen and(max-width: 768px){
-        font-size: 15px;
-        
-        
+        font-size: 15px;               
       }
-    }
+     }
       
    }
  }
-  // sezione della parte ristoranti guest
-  & h1 {
-    font-size: 45px;
-    font-weight: bold;
-    color:#272343;
-  }
-// nella sezionescelta ristorante si puo' mettere lo slider
-  & .choose-restaurant{
-    //  display:flex;
-    //  flex-wrap:nowrap;
-    //  justify-content: center;
 
-    & h2 {
-      margin-bottom: 30px;
-      text-align: center;
+
+ 
+// inizio scegli ristorante
+  h1 {
+  font-size: 45px;
+  font-weight: bold;
+  color:#272343;
+}
+
+   h2 {
+    margin-bottom: 30px;
+    text-align: center;
+  }
+
+
+   .guest-restaurants{
+    //background: linear-gradient(to right, #ffffff, hsla(184, 76%, 81%, 0.788));
+    width: 100%;
+    margin: auto;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    
+    @media screen and(max-width: 1200px){
+      width: 80%;
+      margin: auto;
+      justify-content: space-between;
     }
 
-
-    & .guest-restaurants{
-      //background: linear-gradient(to right, #ffffff, hsla(184, 76%, 81%, 0.788));
-      width: 100%;
+    @media screen and(max-width: 768px){
+      width: 80%;
       margin: auto;
-      display: flex;
-      justify-content: space-around;
-      flex-wrap: wrap;
-      
+      justify-content: space-between;
+    }
+
+    @media screen and (max-width: 576px) {
+      width: 65%;
+      justify-content: space-between;
+
+  }
+
+     .card{
+     // background-color: red;
+      width:calc(100% / 6);
+      display: flex;       
+      margin-top: 30px;
+      margin-bottom: 30px;
+    
 
       @media screen and(max-width: 1200px){
-        width: 80%;
-        margin: auto;
-        justify-content: space-between;
+        width: calc(100% / 3 - 10px);
+        margin-bottom: 30px;
       }
 
+
       @media screen and(max-width: 768px){
-        width: 80%;
-        margin: auto;
-        justify-content: space-between;
+        width: calc(100% / 2 - 10px);
+        margin-bottom: 30px;
+
       }
 
       @media screen and (max-width: 576px) {
-        width: 65%;
-        justify-content: space-between;
-
-    }
-
-      & .card{
-       // background-color: red;
-        width:calc(100% / 6);
-        display: flex;       
-        margin-top: 30px;
-        margin-bottom: 30px;
-      
-
-        @media screen and(max-width: 1200px){
-          width: calc(100% / 3 - 10px);
-          margin-bottom: 30px;
-        }
-
-
-        @media screen and(max-width: 768px){
-          width: calc(100% / 2 - 10px);
+          width: 100%;
           margin-bottom: 30px;
 
-        }
-
-        @media screen and (max-width: 576px) {
-            width: 100%;
-            margin-bottom: 30px;
-
-        }
+      }
 
         &:hover {
           background-color:grey;         
           opacity:0.5;
         }
 
-     
-        .card-img-top {   
-          display:flex;
-          justify-content:center;
-          width:100%; 
-          height:70%;     
-          position:relative;          
+   
+      .card-img-top {   
+        display:flex;
+        justify-content:center;
+        width:100%; 
+        height:70%;     
+        position:relative;          
 
-            & img{
-              width:100%;
-              padding:10px;
-            }
+           img{
+            width:100%;
+            padding:10px;
           }
-        .cover-layover{ 
-          display: flex;
-          flex-direction:column;
-          display:none;
-          position: absolute;
-          top: 50%;
-          left: 50%;
-          transform: translate(-50%, -50%);          
-          color:#FFBF00;
-          font-size: 60px;
-            .font-cover{                          
-                display: flex;
-                justify-content:center;
-            }
-            .text-cover{
-                
-                
-            }
+        }
+      .cover-layover{ 
+        display: flex;
+        flex-direction:column;
+        display:none;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);          
+        color:#FFBF00;
+        font-size: 60px;
+          .font-cover{                          
+              display: flex;
+              justify-content:center;
+          }
+          .text-cover{
+             color:black;               
+          }
         }
 
-        .card-img-top:hover .cover-layover{         
-          display:block;
+      .card-img-top:hover .cover-layover{         
+        display:block;
+      }
+    
+      a{
+        text-decoration: none;
+      }
+
+    }
+
+      p{
+        color:#272343;
+        font-weight: bold;
+        font-size: 35px;
+        margin-bottom: 20px;
+        text-align: center;          
+        margin:0px auto 10px auto; 
+        text-transform: capitalize;                       
         }
-      
-        & a{
-          text-decoration: none;
-        }
-
-       
-
-        & p{
-          color:#272343;
-          font-weight: bold;
-          font-size: 35px;
-          margin-bottom: 20px;
-          text-align: center;          
-          margin:0px auto 10px auto; 
-          text-transform: capitalize;                  
-       }
-      }
-    }
-     // fine sezione guest-ristoranti   
-  } //fine choose-restaurant
-}//fine main
+  }
+  
 
 
 
-  .banner {
-    width: 100%;
-    padding: 50px 0;
-    background-color: #fff;
 
-    & .container {
-      display: flex;
-      justify-content: space-between;
-
-      @media screen and (max-width: 992px) {
-        flex-direction: column;
-      }
-    }
-    & .left-side-banner, .right-side-banner {
-      width: 80%;
-      margin: auto;
-
-      @media screen and (max-width: 992px) {
-        width: 100%;
-      }
-    }
-    & h2 {
-      text-align: center;
-      color:#272343;
-    }
-    & img{
-      height: 350px;
-      margin: auto;
-    }
-
-    & .container-img-app{
-      justify-content: center;
-
-      @media screen and (max-width: 768px) {
-        flex-direction: column;
-      }
-    }
-
-    & .container-img-app img {
-      height: 75px;
-      margin: auto;
-     }
-
-   }
 
 .container-section{
-  width:100%;
-  display:flex;
-  flex-direction: row;
+width:100%;
+display:flex;
+flex-direction: row;
+justify-content: center;
+fex-wrap:wrap;
+padding:20px;
+
+.section{
+  display: flex;
+  flex-direction: column;
   justify-content: center;
-  fex-wrap:wrap;
-  padding:20px;
+  
+  img{
+    margin:0 auto;
+    width:50%;
+    margin-bottom:40px;
+  }
+  h3{
+    text-align:center;
+    color:#272343;
+    font-weight: bold;
 
-  .section{
+  }
+  p{
+    text-align:center;
+    color:#272343;
+    font-size: 20px;
+  }
+}
+
+}  //fine container-section
+
+.banner {
+  width: 100%;
+  padding: 50px 0;
+  background-color: #fff;
+
+   .container {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    
-    img{
-      margin:0 auto;
-      width:50%;
-      margin-bottom:40px;
-    }
-    h3{
-      text-align:center;
-      color:#272343;
-      font-weight: bold;
+    justify-content: space-between;
 
+    @media screen and (max-width: 992px) {
+      flex-direction: column;
     }
-    p{
-      text-align:center;
-      color:#272343;
-      font-size: 20px;
+    
+  }
+   .left-side-banner, .right-side-banner {
+    width: 80%;
+    margin: auto;
+
+    @media screen and (max-width: 992px) {
+      width: 100%;
+    }
+  }
+   h2 {
+    text-align: center;
+    color:#272343;
+  }
+   img{
+    height: 350px;
+    margin: auto;
+  }
+
+  .container-img-app{
+    justify-content: center;
+
+    @media screen and (max-width: 768px) {
+      flex-direction: column;
     }
   }
 
-}
+   .container-img-app img {
+    height: 75px;
+    margin: auto;
+   }
 
-
-
+ } //fine banner
 
 
 
