--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10954,19 +10954,24 @@ a.text-dark:focus {
   font-style: inherit;
 }
 
+.logo {
+  transform: scale(1.3);
+}
+
 header {
   width: 100%;
   height: 500px;
-  background-image: url("https://www.vitaminity.com/it/pub/media/blog/cache/840x473/magefan_blog/VITAMINITY_CIBI_SANI.jpg");
   background-position: center;
   background-size: cover;
 }
 
 header .layover {
-  margin: 70px auto 10px auto;
-  width: 80%;
+  margin: 87px auto 10px auto;
+  width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.3);
+  background-image: url(/images/sfondo-verde2.png?ba6258bfdfac20499e5f343946fa48a3);
+  background-size: cover;
+  background-position: center;
 }
 
 header nav {
@@ -10984,7 +10989,6 @@ header nav div ul li {
 header .header-content-guest {
   display: flex;
   justify-content: center;
-  background-color: transparent;
 }
 
 @media screen and (max-width: 992px) {
@@ -10995,7 +10999,7 @@ header .header-content-guest {
 }
 
 header .header-content-guest .hcg-left {
-  width: 50%;
+  width: 100%;
   height: 300px;
   margin-top: 60px;
   display: flex;
@@ -11010,22 +11014,16 @@ header .header-content-guest .hcg-left {
   }
 }
 
-header .header-content-guest .hcg-left h2 {
+header .header-content-guest .hcg-left h1 {
   color: white;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 70px;
   text-align: center;
 }
 
-@media screen and (max-width: 992px) {
-  header .header-content-guest .hcg-left h2 {
-    font-size: 40px;
-  }
-}
-
-@media screen and (max-width: 766px) {
-  header .header-content-guest .hcg-left h2 {
-    font-size: 30px;
+@media screen and (max-width: 768px) {
+  header .header-content-guest .hcg-left h1 {
+    font-size: 50px;
   }
 }
 
@@ -11042,13 +11040,20 @@ header .header-content-guest .hcg-left .header-searchbar {
 }
 
 header .header-content-guest .hcg-left .header-searchbar input {
-  width: 300px;
-  height: 50px;
-  border-radius: 5px;
+  width: 600px;
+  border-radius: 10px;
   margin-top: 20px;
-  text-align: justify;
-  padding: 10px;
-  font-size: 20px;
+  outline: none;
+  text-align: center;
+  padding: 10px 5px;
+}
+
+@media screen and (max-width: 768px) {
+  header .header-content-guest .hcg-left .header-searchbar input {
+    width: 300px;
+    padding: 5px 0;
+    margin-top: 5px;
+  }
 }
 
 header .header-content-guest .hcg-left .header-searchbar .container-search {
@@ -11121,7 +11126,7 @@ header .header-content-guest div.hcg-right i {
 
 footer {
   width: 100%;
-  background-color: black;
+  background-color: #2e3333;
 }
 
 footer .container {
@@ -11134,7 +11139,7 @@ footer .container .card {
   width: calc(100% / 4);
   margin: 30px;
   padding: 20px;
-  background-color: #464646;
+  background-color: #434848;
   color: white;
 }
 
@@ -11174,7 +11179,7 @@ footer .container .card ul a {
 }
 
 footer .container .card ul a:hover {
-  color: #ffd803;
+  color: #00c79c;
   transition: all 0.2s ease-in-out;
 }
 
@@ -11201,18 +11206,39 @@ footer .font i {
 }
 
 footer .font .fb-blue:hover {
-  color: blue;
+  color: #6565f0;
   cursor: pointer;
+  transition: all 0.2s ease-in-out;
+}
+
+@media (prefers-reduced-motion: reduce) {
+  footer .font .fb-blue:hover {
+    transition: none;
+  }
 }
 
 footer .font .inst-red:hover {
-  color: red;
+  color: #f36161;
   cursor: pointer;
+  transition: all 0.2s ease-in-out;
+}
+
+@media (prefers-reduced-motion: reduce) {
+  footer .font .inst-red:hover {
+    transition: none;
+  }
 }
 
 footer .font .twt-lightblue:hover {
-  color: lightblue;
+  color: #7cd3f0;
   cursor: pointer;
+  transition: all 0.2s ease-in-out;
+}
+
+@media (prefers-reduced-motion: reduce) {
+  footer .font .twt-lightblue:hover {
+    transition: none;
+  }
 }
 
 main {
@@ -11220,10 +11246,9 @@ main {
   background-color: #fffffe;
 }
 
-main h1 {
+main h2 {
   text-align: center;
   color: #272343;
-  background-color: white;
   margin-bottom: 25px;
   margin-top: 25px;
 }
@@ -11237,7 +11262,7 @@ main .container-tipologie {
 }
 
 main .container-tipologie .tipologie {
-  width: calc(100% / 5);
+  width: calc(100% / 4);
   padding: 20px;
   display: flex;
   justify-content: space-between;
@@ -11246,13 +11271,13 @@ main .container-tipologie .tipologie {
 
 @media screen and (max-width: 1200px) {
   main .container-tipologie .tipologie {
-    width: calc(100% / 5);
+    width: calc(100% / 4);
   }
 }
 
 @media screen and (max-width: 768px) {
   main .container-tipologie .tipologie {
-    width: calc(100% / 5 -10px);
+    width: calc(100% / 3);
   }
 }
 
@@ -11495,14 +11520,21 @@ main .card-restaurant .btn-menu {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  fex-wrap: wrap;
+  flex-wrap: wrap;
   padding: 20px;
 }
 
 .container-section .section {
+  width: calc(100% / 3);
   display: flex;
   flex-direction: column;
   justify-content: center;
+}
+
+@media screen and (max-width: 768px) {
+  .container-section .section {
+    width: 100%;
+  }
 }
 
 .container-section .section img {
@@ -11521,6 +11553,10 @@ main .card-restaurant .btn-menu {
   text-align: center;
   color: #272343;
   font-size: 20px;
+}
+
+.container-titoli {
+  width: 100%;
 }
 
 body {
@@ -12273,5 +12309,9 @@ body {
 
 .button-admin span {
   color: white;
+}
+
+.mostra-tutti {
+  background-color: #00c79c;
 }
 
