--- a/resources/sass/partials/_header.scss
+++ b/resources/sass/partials/_header.scss
@@ -3,18 +3,24 @@
   font-weight: bold;
   font-style: inherit;
 }
+
+.logo{
+  transform: scale(1.30);
+}
+
 header {
   width: 100%;
   height:500px;
-  background-image: url('https://www.vitaminity.com/it/pub/media/blog/cache/840x473/magefan_blog/VITAMINITY_CIBI_SANI.jpg');
   background-position: center;
   background-size: cover;
 
   & .layover{
-    margin:70px auto 10px auto;
-    width: 80%;
+    margin:87px auto 10px auto;
+    width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.3);
+    background-image: url('../../../public/img/sfondo-verde2.png');
+    background-size: cover;
+    background-position: center;
   }
   & nav {
     background-color:rgb(255, 191, 0, 0.7) ;
@@ -32,7 +38,6 @@ header {
    & .header-content-guest{
      display: flex;
      justify-content: center;
-     background-color:transparent;
 
 
 
@@ -42,7 +47,7 @@ header {
      }
 
      & .hcg-left{
-       width: 50%;
+       width: 100%;
        height: 300px;
        margin-top:60px;
        display: flex;
@@ -55,16 +60,13 @@ header {
        }
 
 
-       & h2 {
+       & h1 {
          color: white;
          font-family:Arial, Helvetica, sans-serif;
         font-size: 70px;
         text-align: center;
-        @media screen and(max-width: 992px){
-          font-size: 40px;
-        }
-        @media screen and(max-width: 766px){
-          font-size: 30px;
+        @media screen and(max-width: 768px){
+          font-size: 50px;
         }
        }
 
@@ -78,14 +80,19 @@ header {
         }
 
         & input{       
-          width: 300px;
-          height:50px;
-          border-radius: 5px; 
+          width: 600px;
+          border-radius: 10px; 
           margin-top: 20px;
-          text-align:justify;
-          padding:10px;
-          font-size: 20px;
+          outline: none;
+          text-align:center;
+          padding:10px 5px;
 
+          @media screen and(max-width: 768px){
+            width: 300px;
+            padding: 5px 0;
+            margin-top: 5px;
+
+          }
         }
 
         & .container-search {
