--- a/resources/sass/partials/_main.scss
+++ b/resources/sass/partials/_main.scss
@@ -4,10 +4,9 @@ main{
   background-color:#fffffe;
 
   // tipologie
-  h1{
+  h2{
     text-align:center;
     color:#272343;
-    background-color: white;
     margin-bottom:25px;
     margin-top:25px;
   }
@@ -21,20 +20,20 @@ main{
     margin:0 auto;
 
     .tipologie{
-      width:calc(100% / 5);
+      width:calc(100% / 4);
       padding:20px;
       display:flex;
       justify-content:space-between;
       flex-direction: column;
 
       @media screen and(max-width: 1200px){
-        width:calc(100% / 5);
+        width:calc(100% / 4);
         
         
       }
 
       @media screen and(max-width: 768px){
-        width:calc(100% / 5 -10px);
+        width:calc(100% / 3);
         
         
       }
@@ -270,17 +269,22 @@ main{
    }
 
 .container-section{
-  width:100%;
+  width: 100%;
   display:flex;
   flex-direction: row;
   justify-content: center;
-  fex-wrap:wrap;
+  flex-wrap:wrap;
   padding:20px;
 
+  
   .section{
+    width:calc(100% / 3);
     display: flex;
     flex-direction: column;
     justify-content: center;
+    @media screen and (max-width: 768px) {
+      width: 100%;
+    }
     img{
       margin:0 auto;
       width:50%;
@@ -299,6 +303,11 @@ main{
     }
   }
 
+
+}
+
+.container-titoli {
+  width: 100%;
 }
 
 
