--- a/resources/sass/partials/_show.scss
+++ b/resources/sass/partials/_show.scss
@@ -358,6 +358,10 @@ margin-top:80px;
       transform:translateX(30px);
       opacity: 0;
     }
+    50%{
+      transform:translateX(15px);
+      opacity: 0;
+    }
     100%{
       transform: translateX(0);
       opacity: 1;
@@ -368,6 +372,14 @@ margin-top:80px;
     0%{
       transform:translateX(-120px);
       opacity: 0;
+    }
+    50%{
+      transform:translateX(-80px);
+      opacity: 1;
+    }
+    75%{
+      transform:translateX(-40px);
+      opacity: 1;
     }
     100%{
       transform: translateX(0);
